Fix build system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,12 +5,13 @@ project(MyCProgram C)
 set(CMAKE_DISABLE_IN_SOURCE_BUILD TRUE)
 enable_testing()
 
-add_library(matrix_mul lib/matrix_mul.c)
-target_include_directories(matrix_mul PUBLIC include/matrix_mul.h)
+add_library(matrix_mul STATIC)
+target_include_directories(matrix_mul PUBLIC include)
+target_sources(matrix_mul PRIVATE lib/matrix_mul.c)
 
 add_executable(driver src/main.c)
 target_link_libraries(driver PRIVATE matrix_mul)
-#target_include_directories(driver include/matrix_mul.h)
+#target_include_directories(driver PRIVATE include)
 
 #foreach(size RANGE 2 3)
 #  add_test(NAME ${size}x${size} COMMAND matrix_mul ${size} ${size})
