Add matrix multiplication, test still required

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,6 @@
 cmake_minimum_required(VERSION 3.30)
 
-project(MyCProgram C)
-
-set(CMAKE_DISABLE_IN_SOURCE_BUILD TRUE)
-enable_testing()
+project(MatrixMultiplication VERSION 0.1 LANGUAGES C)
 
 add_library(matrix_mul STATIC)
 target_include_directories(matrix_mul PUBLIC include)
@@ -11,8 +8,11 @@ target_sources(matrix_mul PRIVATE lib/matrix_mul.c)
 
 add_executable(driver src/main.c)
 target_link_libraries(driver PRIVATE matrix_mul)
-#target_include_directories(driver PRIVATE include)
 
-#foreach(size RANGE 2 3)
-#  add_test(NAME ${size}x${size} COMMAND matrix_mul ${size} ${size})
-#endforeach()
+
+if(ENABLE_TESTING)
+  enable_testing()
+  add_executable(matrix_gen test/matrix_gen.c)
+  target_link_libraries(matrix_gen PRIVATE matrix_mul)
+  add_test(NAME matrix_gen COMMAND matrix_gen 2 5)
+endif()
