Update small and large multiply, with checks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,13 +6,23 @@ add_library(matrix_mul STATIC)
 target_include_directories(matrix_mul PUBLIC include)
 target_sources(matrix_mul PRIVATE lib/matrix_mul.c)
 
+add_library(test_library STATIC)
+target_include_directories(test_library PUBLIC include)
+target_sources(test_library PRIVATE lib/test_library.c)
+
 add_executable(driver src/main.c)
 target_link_libraries(driver PRIVATE matrix_mul)
-
+set(CMAKE_C_CFLAGS "-Wall -Wno-dev -Wl -g -O0")
 
 if(ENABLE_TESTING)
   enable_testing()
-  add_executable(matrix_gen test/matrix_gen.c)
-  target_link_libraries(matrix_gen PRIVATE matrix_mul)
-  add_test(NAME matrix_gen COMMAND matrix_gen 2 5)
+  # Find and Loop through each file in the './test directory'
+  set(TEST_DIR "${CMAKE_CURRENT_SOURCE_DIR}/test")
+  file(GLOB test_files RELATIVE "${TEST_DIR}" "${TEST_DIR}/*.c")
+  foreach(file ${test_files})
+      string(REPLACE ".c" "" target_name ${file})
+      add_executable(${target_name} "${TEST_DIR}/${file}")
+      target_link_libraries(${target_name} PRIVATE matrix_mul test_library)
+      add_test(NAME ${target_name} COMMAND ${target_name})
+  endforeach()
 endif()
