Add test and timer libraries with tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,13 +6,17 @@ add_library(matrix_mul STATIC)
 target_include_directories(matrix_mul PUBLIC include)
 target_sources(matrix_mul PRIVATE lib/matrix_mul.c)
 
+add_library(timer STATIC)
+target_include_directories(timer PUBLIC include)
+target_sources(timer PRIVATE lib/timer.c)
+
 add_library(test_library STATIC)
 target_include_directories(test_library PUBLIC include)
 target_sources(test_library PRIVATE lib/test_library.c)
 
 add_executable(driver src/main.c)
-target_link_libraries(driver PRIVATE matrix_mul)
-set(CMAKE_C_CFLAGS "-Wall -Wno-dev -Wl -g -O0")
+target_link_libraries(driver PRIVATE matrix_mul timer)
+set(CMAKE_C_CFLAGS "-Wall -Wno-dev -Wl -g -O2 -march=native")
 
 if(ENABLE_TESTING)
   enable_testing()
@@ -22,7 +26,7 @@ if(ENABLE_TESTING)
   foreach(file ${test_files})
       string(REPLACE ".c" "" target_name ${file})
       add_executable(${target_name} "${TEST_DIR}/${file}")
-      target_link_libraries(${target_name} PRIVATE matrix_mul test_library)
+      target_link_libraries(${target_name} PRIVATE matrix_mul test_library timer)
       add_test(NAME ${target_name} COMMAND ${target_name})
   endforeach()
 endif()
