--- a/config/matrix_mul.h.in
+++ b/config/matrix_mul.h.in
@@ -3,7 +3,7 @@
 # define MAX 5
 # define MIN -5
 
-#define BLOCK_SIZE 512
+#define BLOCK_SIZE @BLOCK_SIZE@
 
 int* malloc_matrix_int(const int n);
 void free_matrix_int(int *matrix);
